--- a/projects/RingQueue/vc2013/RingQueue.vcxproj
+++ b/projects/RingQueue/vc2013/RingQueue.vcxproj
@@ -183,8 +183,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\include\RingQueue\console.h" />
+    <ClInclude Include="..\..\..\include\RingQueue\DisruptorRingQueue.h" />
     <ClInclude Include="..\..\..\include\RingQueue\dump_mem.h" />
     <ClInclude Include="..\..\..\include\RingQueue\get_char.h" />
+    <ClInclude Include="..\..\..\include\RingQueue\MessageEvent.h" />
     <ClInclude Include="..\..\..\include\RingQueue\mq.h" />
     <ClInclude Include="..\..\..\include\RingQueue\msvc\inttypes.h" />
     <ClInclude Include="..\..\..\include\RingQueue\msvc\pthread.h" />
@@ -195,6 +197,7 @@
     <ClInclude Include="..\..\..\include\RingQueue\port.h" />
     <ClInclude Include="..\..\..\include\RingQueue\q3.h" />
     <ClInclude Include="..\..\..\include\RingQueue\RingQueue.h" />
+    <ClInclude Include="..\..\..\include\RingQueue\Sequence.h" />
     <ClInclude Include="..\..\..\include\RingQueue\sleep.h" />
     <ClInclude Include="..\..\..\include\RingQueue\SpinMutex.h" />
     <ClInclude Include="..\..\..\include\RingQueue\sys_timer.h" />
