--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,6 @@
 /config.status
 # /configure
 
-# /lib/
-
 # /Makefile
 
 /CMakeFiles
@@ -47,10 +45,13 @@
 *.mod
 
 # Ignore Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+# *.lai
+# *.la
+# *.a
+# *.lib
+
+# Ignore project build libraries
+/lib/
 
 # Ignore Executables
 *.exe
@@ -112,6 +113,9 @@ Icon?
 
 # Ignore Sublime Text 2 dump files
 *.dump
+
+# Ignore Eclipse or VSCode settings files
+.settings
 
 # Ignore stackdump files on Linux
 *.stackdump
